--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -69,3 +69,11 @@
 .scroll-bar {
   @apply [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300 dark:[&::-webkit-scrollbar-track]:bg-slate-700 dark:[&::-webkit-scrollbar-thumb]:bg-slate-500
 }
+
+.page-head {
+  @apply font-semibold text-xl text-gray-800 dark:text-gray-200 leading-tight;
+}
+
+.action-btn {
+  @apply py-1 px-2 rounded-md text-sm font-semibold;
+}
